--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,9 @@
   --container-width: 1200px;
   --container-padding: 40px;
 
-  --section-padding-y: 20px;
+  --section-margin-y: 20px;
+  --section-padding-x: 15px;
+  --section-padding-y: 30px;
 
   --transition-duration: 0.3s;
 }
@@ -86,6 +88,11 @@ ul {
   list-style-type: none;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .container {
   max-width: calc(var(--container-width) + var(--container-padding) * 2);
   padding: var(--container-padding);
@@ -97,6 +104,11 @@ footer,
 section {
   background-color: var(--color-light);
   border-radius: var(--border-radius);
+}
+
+section {
+  margin: var(--section-margin-y) 0;
+  padding: var(--section-padding-y) var(--section-padding-x);
 }
 
 /* Header */
@@ -132,6 +144,29 @@ section {
   height: 2px;
   background-color: currentColor;
   transition-duration: var(--transition-duration);
+}
+
+/* About */
+.about {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 20px;
+}
+
+.about__img-wrapper {
+  max-width: 200px;
+  max-height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.about__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 /* Media */
