--- a/css/style.css
+++ b/css/style.css
@@ -54,16 +54,21 @@ h3,
 h4,
 h5,
 h6 {
+  display: inline-block;
   font-weight: 500;
   color: var(--color-dark-alt);
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 34px;
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 28px;
+}
+
+h3 {
+  font-size: 20px;
 }
 
 /* Base */
@@ -109,6 +114,23 @@ section {
 section {
   margin: var(--section-margin-y) 0;
   padding: var(--section-padding-y) var(--section-padding-x);
+}
+
+.button {
+  display: inline-flex;
+  align-items: center;
+  min-height: 48px;
+  padding: 0 20px;
+  background-color: transparent;
+  border: var(--border);
+  border-radius: var(--border-radius);
+  transition-duration: var(--transition-duration);
+}
+
+.puddle-bg {
+  padding: 5px 10px;
+  background-color: var(--color-accent);
+  border-radius: var(--border-radius);
 }
 
 /* Header */
@@ -169,10 +191,27 @@ section {
   object-position: center;
 }
 
+.experience__item:not(:last-child) {
+  border-bottom: var(--border);
+}
+
+.card__description p {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.card__buttons-wrapper {
+  margin-bottom: 15px;
+}
+
 /* Media */
 @media (hover: hover) {
   .menu__link:hover::after {
     width: 100%;
+  }
+
+  .button:hover {
+    background-color: var(--color-accent);
   }
 }
 
