--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ section {
 .content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, 100%);
   gap: 20px;
   padding: 31px 0;
 }
@@ -338,6 +339,39 @@ section {
 .education__time {
   margin: 0 0 20px 0;
   opacity: 0.5;
+}
+
+/* Code */
+.code {
+  grid-area: 6 / 1 / 7 / 3;
+}
+
+.code__text {
+  color: var(--color-light);
+}
+
+.code__text--function {
+  color: lightblue;
+}
+
+.code__text--function-name {
+  color: lightgreen;
+}
+
+.code__text--function-arg {
+  color: lightsalmon;
+}
+
+.code__text--function-return {
+  color: lightcoral;
+}
+
+.code pre {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-dark);
+  border-radius: var(--border-radius);
 }
 
 /* Media */
