--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,31 @@ section {
   border-radius: var(--border-radius);
 }
 
+/* Footer */
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--section-padding-x);
+}
+
+.footer__list {
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
+}
+
+.footer__link svg {
+  width: 50px;
+  height: 50px;
+  transition-duration: var(--transition-duration);
+}
+
+.footer__item .footer__icon--rsschool {
+  width: 100px;
+  height: 50px;
+}
+
 /* Media */
 @media (hover: hover) {
   .menu__link:hover::after {
@@ -386,6 +411,10 @@ section {
 
   .contacts__item:has(.contacts__link:hover)::after {
     width: 70%;
+  }
+
+  .footer__link:hover svg {
+    opacity: 0.5;
   }
 }
 
